--- a/Powder/Powder.vcxproj
+++ b/Powder/Powder.vcxproj
@@ -125,6 +125,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Element\Elements\Metl.cpp" />
     <ClCompile Include="src\SimObject.cpp" />
     <ClCompile Include="src\SimTool\Tools\PosP.cpp" />
     <ClCompile Include="src\Element\Elements\Acid.cpp" />
@@ -173,6 +174,7 @@
     <ClCompile Include="src\Element\Elements\Wtrv.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Element\Elements\Metl.h" />
     <ClInclude Include="src\SimObject.h" />
     <ClInclude Include="src\Element\ElementIncludes.h" />
     <ClInclude Include="src\Element\Elements\Acid.h" />
